fix: spacing on extra information in list

--- a/apps/website/inertia/css/app.css
+++ b/apps/website/inertia/css/app.css
@@ -230,5 +230,9 @@
 
   li {
     @apply text-sm;
+
+    p {
+      @apply contents;
+    }
   }
 }
